rollup is exporting but we have issues when importing into the blog repo

--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "prosemirror-slash-menu-react",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.1",
+  "description": "Implementation of prosemirror-slash-menu in react",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-sucrase": "^5.0.1",
+    "@rollup/plugin-typescript": "^11.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,34 +17,65 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
+    "prettier": "^2.8.8",
+    "prosemirror-commands": "^1.5.2",
+    "prosemirror-schema-basic": "^1.2.2",
+    "prosemirror-slash-menu": "file:.yalc/prosemirror-slash-menu",
+    "prosemirror-view": "^1.31.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-popper": "^2.3.0",
     "react-scripts": "5.0.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "rollup -c --bundleConfigAsCjs",
+    "yalc:watch": "nodemon --watch dist --exec 'yalc push'",
+    "dev:watch": "npm-run-all --parallel dev yalc:watch"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/emergence-engineering/prosemirror-slash-menu-react.git"
+  },
+  "files": [
+    "dist/**/*"
+  ],
+  "author": "Emergence Engineering",
+  "keywords": [
+    "ProseMirror",
+    "React",
+    "slash",
+    "menu"
+  ],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/emergence-engineering/prosemirror-slash-menu-react/issues"
+  },
+  "homepage": "https://github.com/emergence-engineering/prosemirror-slash-menu-react#readme",
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "nodemon": "^2.0.22",
+    "rollup": "^2.79.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-typescript2": "^0.34.1"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
   }
 }
