--- a/package.json
+++ b/package.json
@@ -6,30 +6,14 @@
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "@rollup/plugin-commonjs": "^25.0.0",
-    "@rollup/plugin-sucrase": "^5.0.1",
-    "@rollup/plugin-typescript": "^11.1.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.34",
-    "@types/react": "^18.2.9",
-    "@types/react-dom": "^18.2.4",
-    "prettier": "^2.8.8",
     "prosemirror-commands": "^1.5.2",
     "prosemirror-schema-basic": "^1.2.2",
     "prosemirror-slash-menu": "^0.1.0",
-    "prosemirror-view": "^1.31.4",
+    "prosemirror-view": "^1.31.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
-    "rollup-plugin-import-css": "^3.2.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "rollup-plugin-import-css": "^3.2.1"
   },
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
@@ -56,16 +40,23 @@
   },
   "homepage": "https://github.com/emergence-engineering/prosemirror-slash-menu-react#readme",
   "devDependencies": {
-    "@babel/core": "^7.22.1",
-    "@babel/preset-env": "^7.22.4",
-    "@babel/preset-react": "^7.22.3",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "@popperjs/core": "^2.11.8",
     "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.2",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-sucrase": "^5.0.1",
+    "@rollup/plugin-typescript": "^11.1.1",
+    "@types/react": "^18.2.13",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
     "rollup": "^2.79.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-typescript2": "^0.34.1"
+    "rollup-plugin-typescript2": "^0.34.1",
+    "typescript": "^5.1.3"
   },
   "peerDependencies": {
     "react": "^18.2.0"
