--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
+    "test": "echo TODO",
     "yalc:watch": "nodemon --watch dist --exec 'yalc push'",
     "dev:watch": "npm-run-all --parallel dev yalc:watch"
   },
