config: 🔧 changeset and pnpm

--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "prosemirror-slash-menu-react",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Implementation of prosemirror-slash-menu in react",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
+  "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "test": "echo \"no test specified\" && exit 0",
+    "build": "rollup -c --bundleConfigAsCjs",
+    "dev": "rollup -c -w --bundleConfigAsCjs",
+    "yalc:watch": "nodemon --watch dist --exec 'yalc push'",
+    "lint": "tsc --noEmit && eslint src --ext .ts",
+    "prepublishOnly": "pnpm run build && pnpm test && pnpm run lint",
+    "dev:watch": "npm-run-all --parallel dev yalc:watch"
+  },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "@rollup/plugin-commonjs": "^25.0.0",
@@ -17,10 +27,10 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
-    "prettier": "^2.8.8",
     "prosemirror-commands": "^1.5.2",
     "prosemirror-schema-basic": "^1.2.2",
-    "prosemirror-slash-menu": "^0.1.4",
+    "prosemirror-slash-menu": "workspace:*",
+    "prosemirror-state": "1.4.3",
     "prosemirror-view": "^1.31.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,14 +38,8 @@
     "rollup-plugin-import-css": "^3.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "typescript": "^4.9.5",
+    "typescript": "^5.1.6",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "test": "echo \"no test specified\" && exit 0",
-    "build": "rollup -c --bundleConfigAsCjs",
-    "yalc:watch": "nodemon --watch dist --exec 'yalc push'",
-    "dev:watch": "npm-run-all --parallel dev yalc:watch"
   },
   "repository": {
     "type": "git",
@@ -62,8 +66,15 @@
     "@babel/preset-react": "^7.22.3",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.33.0",
     "nodemon": "^2.0.22",
     "np": "^8.0.4",
+    "prettier": "^2.8.8",
     "rollup": "^2.79.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-copy": "^3.4.0",
