quickfix: 🚑 out of range error at end of nodeSize

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,26 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:react/recommended"
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "react", "prettier", "jest"],
+  "rules": {
+    "padding-line-between-statements": [
+      "error",
+      { "blankLine": "always", "prev": "function", "next": "*" },
+      { "blankLine": "always", "prev": "*", "next": "function" },
+      { "blankLine": "always", "prev": "block-like", "next": "*" },
+      { "blankLine": "always", "prev": "*", "next": "block-like" },
+      { "blankLine": "always", "prev": "if", "next": "*" },
+      { "blankLine": "always", "prev": "*", "next": "if" }
     ],
-    "parser": "@typescript-eslint/parser",
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-        "@typescript-eslint",
-        "react",
-	"prettier",
-	"jest"
-    ],
-    "rules": {
     "import/no-unresolved": "off",
     "import/extensions": "off",
     "no-shadow": "off",
@@ -24,5 +28,5 @@
     "no-promise-executor-return": "off",
     "consistent-return": "off",
     "import/prefer-default-export": "off"
-    }
+  }
 }
