--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "rollup -c -w --bundleConfigAsCjs",
     "yalc:watch": "nodemon --watch dist --exec 'yalc push'",
     "lint": "tsc --noEmit && eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
     "prepublishOnly": "pnpm run build && pnpm test && pnpm run lint",
     "dev:watch": "npm-run-all --parallel dev yalc:watch"
   },
