--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/react-dom": "^18.2.4",
     "prosemirror-commands": "^1.5.2",
     "prosemirror-schema-basic": "^1.2.2",
-    "prosemirror-slash-menu": "workspace:*",
+    "prosemirror-slash-menu": "^0.1.5",
     "prosemirror-state": "1.4.3",
     "prosemirror-view": "^1.31.4",
     "react": "^18.2.0",
