--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prosemirror-slash-menu-react",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "description": "Implementation of prosemirror-slash-menu in react",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -81,7 +81,7 @@
     "rollup-plugin-typescript2": "^0.34.1"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.0.0 || ^19.0.0"
   },
   "engines": {
     "node": ">=12",
