--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prosemirror-slash-menu-react",
-  "version": "0.4.7",
+  "version": "0.4.8",
   "description": "Implementation of prosemirror-slash-menu in react",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -32,8 +32,6 @@
     "prosemirror-slash-menu": "workspace:*",
     "prosemirror-state": "1.4.3",
     "prosemirror-view": "^1.31.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "rollup-plugin-import-css": "^3.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -64,6 +62,8 @@
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
@@ -81,7 +81,8 @@
     "rollup-plugin-typescript2": "^0.34.1"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0"
+    "react": "^18.2.0 || ^19.0.0",
+    "react-dom": "^18.2.0 || ^19.0.0"
   },
   "engines": {
     "node": ">=12",
